<resources>
    <string name="app_name">WealFur</string>
    <string name="login_welcome">Welcome Back!</string>
    <string name="login_page_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="login_using">Login using:</string>
    <string name="new_to_wealfur">New to WealFur?</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="you">You</string>
    <string name="id">ID -></string>
    <string name="pet_name">Gaston</string>
    <string name="pet_s_breed">Golden Retriever</string>
    <string name="pet_age">2 y/o</string>
    <string name="pet_weight">5 kilos</string>
    <string name="pet_picture">Pet\'s Picture</string>
    <string name="settings">Settings</string>
    <string name="appointments">Appointments -></string>
    <string name="your_profile">Your profile</string>
    <string name="medicine"><![CDATA[Medicine ->]]></string>
    <string name="food"><![CDATA[Food ->]]></string>
    <string name="playtime"><![CDATA[Playtime ->]]></string>
</resources>