<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/backgroundMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="54dp"
            android:backgroundTint="@color/lightBlue"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            >
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/your_profile"
                android:src="@android:drawable/ic_menu_myplaces"
                android:layout_gravity="start"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp">
            </ImageButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:textSize="24sp"
                android:fontFamily=""
                android:textColor="@color/backgroundMain"
                android:textStyle="bold"
                >
            </TextView>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_button"
                android:contentDescription="@string/settings"
                android:src="@android:drawable/ic_menu_preferences"
                android:foregroundGravity="right"
                android:layout_gravity="end"
                android:layout_marginEnd="12dp"
                >
            </ImageButton>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:layout_marginTop="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginBottom="0dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="4dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/id"
                        android:textColor="@color/lightBlue"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </Button>

                    <ImageView
                        android:id="@+id/petPicture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/buttonID"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        android:cropToPadding="false"
                        android:scaleX="1"
                        android:scaleY="1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/buttonID"

                        android:background="@drawable/pet_image_circular"
                        >

                    </ImageView>

                    <TextView
                        android:id="@+id/petNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="32dp"
                        android:layout_toEndOf="@+id/petPicture"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:text="@string/pet_name"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        android:shadowColor="@color/yellow"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="6"
                        app:layout_constraintEnd_toStartOf="@+id/petAgeTextView"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toEndOf="@+id/buttonID"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/petAgeTextView"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="32dp"
                        android:layout_toEndOf="@+id/petPicture"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:text="@string/pet_age"
                        android:textAlignment="textStart"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        android:shadowColor="@color/yellow"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="6"
                        app:layout_constraintStart_toEndOf="@+id/petNameTextView"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/petBreedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/petNameTextView"
                        android:layout_alignParentEnd="true"

                        android:layout_toEndOf="@+id/petPicture"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:text="@string/pet_s_breed"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        app:layout_constraintBottom_toTopOf="@+id/petWeightTextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/petPicture"
                        app:layout_constraintTop_toBottomOf="@+id/petAgeTextView">

                    </TextView>

                    <TextView
                        android:id="@+id/petWeightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/petNameTextView"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/petPicture"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:text="@string/pet_weight"
                        android:textAlignment="center"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:textStyle="normal"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/petPicture"
                        app:layout_constraintTop_toBottomOf="@+id/petBreedTextView">

                    </TextView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginBottom="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonAppointments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/appointments"
                        android:textColor="@color/lightBlue"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </Button>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginBottom="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonMedicine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/medicine"
                        android:textColor="@color/lightBlue"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </Button>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginBottom="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonFood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/food"
                        android:textColor="@color/lightBlue"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </Button>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardUseCompatPadding="true"
                app:cardMaxElevation="6dp"
                app:cardElevation="6dp"
                app:cardPreventCornerOverlap="true"
                android:layout_marginBottom="0dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="8dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/luckiest_guy_regular"
                        android:paddingStart="0dp"
                        android:paddingTop="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="0dp"
                        android:text="@string/playtime"
                        android:textColor="@color/lightBlue"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </Button>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>